@@ -6,6 +6,3 @@
 	* Update documentation to match new implementation.
 
 	* Make an sparc port to not remove previous functionality.
-
-	* Test and correct the ppc and mips ports, after the import and
-	adaptation of the code to lightning.
